Fix immutable list problem.